--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "Victor Koech",
@@ -15,6 +17,7 @@
     "@babel/preset-env": "^7.24.8",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
