--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "battleship",
   "version": "1.0.0",
   "main": "index.js",
+    "homepage": "https://Vick606.github.io/battleship",
   "scripts": {
     "test": "jest",
     "build": "webpack --mode production",
