--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "battleship",
   "version": "1.0.0",
   "main": "index.js",
-    "homepage": "https://vick606.github.io/Battleship",
   "scripts": {
     "test": "jest",
     "build": "webpack --mode production",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "homepage": "https://vick606.github.io/Battleship"
   },
   "keywords": [],
   "author": "Victor Koech",
