--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "battleship",
   "version": "1.0.0",
+  "description": "Battleship game for The Odin Project",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "build": "webpack --mode production",
+    "start": "webpack serve --open",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "homepage": "https://vick606.github.io/Battleship"
   },
   "keywords": [],
   "author": "Victor Koech",
@@ -23,5 +24,6 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "homepage": "https://Vick606.github.io/Battleship"
 }
