--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode production",
     "start": "webpack serve --open",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "Victor Koech",
@@ -19,10 +19,12 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "gh-pages": "^6.1.1",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "homepage": "https://Vick606.github.io/Battleship"
 }
